just some cleaning of old code after doing inspect